--- a/debian/control
+++ b/debian/control
@@ -3,24 +3,29 @@ Section: admin
 Priority: required
 Maintainer: Colin Watson <cjwatson@debian.org>
 Standards-Version: 3.9.8
-Build-Depends: debhelper-compat (= 13),
-               docbook <!nodoc>,
-               docbook-utils <!nodoc>,
-               libdebconfclient0-dev,
-               libselinux1-dev [linux-any],
-               po4a,
+Build-Depends:
+ debhelper-compat (= 13),
+ docbook <!nodoc>,
+ docbook-utils <!nodoc>,
+ libdebconfclient0-dev,
+ libselinux1-dev [linux-any],
+ po4a,
 Vcs-Git: https://salsa.debian.org/debian/base-passwd.git
 Vcs-Browser: https://salsa.debian.org/debian/base-passwd
 Rules-Requires-Root: no
+X-Style: black
 
 Package: base-passwd
 Architecture: any
 Multi-Arch: foreign
-Depends: ${misc:Depends},
-         ${shlibs:Pre-Depends},
-Recommends: ${misc:Recommends},
+Depends:
+ ${misc:Depends},
+ ${shlibs:Pre-Depends},
+Recommends:
+ ${misc:Recommends},
 Essential: yes
-Replaces: base,
+Replaces:
+ base,
 Description: Debian base system master password and group files
  These are the canonical master copies of the user database files
  (/etc/passwd and /etc/group), containing the Debian-allocated user and
